--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
     /* The Font Family- Really important!! */
     font-family: Arial, sans-serif;
     box-sizing: border-box;
+    background-color: rgb(8, 0, 22);
 }
 
 /* reset for images to ensure they ar 100% of the parent container width */
@@ -16,14 +17,14 @@ img {
 
 /* The hero section styling- use your OWN Hero Image URL here */
 .hero {
-    background-image: url('images/techquitybanner-1130x160.png');
+    background-image: url(images/WebsiteHeader.png);
     height: 25vh;
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: black;
     text-align: center;
     position: relative;
 }
@@ -36,10 +37,10 @@ img {
 
 /* nice big font on a banner style background */
 .topic-title{
-    color: white;
+    color: rgb(248, 244, 255);
     font-size: 2em;
     padding: 0.1em 3em;
-    background-color: rgb(71, 71, 71);
+    background-color: rgb(54, 3, 102);
 }
 
 /* Three column grid with a nice big gap */
@@ -55,8 +56,8 @@ img {
 
 /* Styling for the individual topic cards rounded edges background color and a drop shadow */
 .topic-card{
-    background-color: rgb(71, 71, 71);
-    color: white;
+    background-color: rgb(101, 7, 189);
+    color: rgb(248, 244, 255);
     padding: 1em;
     border-radius: 0.5em;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
@@ -73,8 +74,8 @@ img {
 
 /* Styling for a footer section to take a bit of spcae at the bottom of the page */
 .footer{
-    background-color: rgb(71, 71, 71);
-    color: white;
+    background-color: rgb(54, 3, 102);
+    color: rgb(248, 244, 255);
     text-align: right;
     padding: 3em 3em;
 }
